tests/errors/preprocessor/temporarily_unemployed/eval/egor_2.c
#define s #eval(1 - 1)

void main()
{
 assert(s == 0, "fail1");
}